--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "homepage": "https://www.uchebest.store",  
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "vercel --prod"  
   },
   "dependencies": {
     "file-saver": "^2.0.5",
@@ -36,5 +38,4 @@
   },
   "overrides": {
     "vite": "npm:rolldown-vite@7.2.5"
-  }
-}
+  }}
