--- a/vercel.json
+++ b/vercel.json
@@ -4,6 +4,8 @@
   "installCommand": "npm install",
   "framework": "vite",
   "outputDirectory": "dist",
+  "nodeVersion": "20.x",
+  "regions": ["iad1"],
   "rewrites": [
     {
       "source": "/(.*)",
