--- a/package.json
+++ b/package.json
@@ -3,13 +3,16 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "homepage": "https://www.uchebest.store",  
+  "homepage": "https://www.uchebest.store",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "deploy": "vercel --prod"  
+    "deploy": "vercel --prod"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   },
   "dependencies": {
     "file-saver": "^2.0.5",
@@ -22,20 +25,13 @@
     "uuid": "^13.0.0"
   },
   "devDependencies": {
-    "@eslint/js": "^9.39.1",
     "@tailwindcss/forms": "^0.5.11",
     "@types/react": "^19.2.5",
     "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react": "^5.1.1",
     "autoprefixer": "^10.4.23",
-    "eslint": "^9.39.1",
-    "eslint-plugin-react-hooks": "^7.0.1",
-    "eslint-plugin-react-refresh": "^0.4.24",
-    "globals": "^16.5.0",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.14",
-    "vite": "npm:rolldown-vite@7.2.5"
-  },
-  "overrides": {
-    "vite": "npm:rolldown-vite@7.2.5"
-  }}
+    "vite": "^6.2.0"
+  }
+}
